<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FriendsChatApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="ab">abcd</string>
    <string name="detailBubble">Detail bubble</string>
    <string name="personImage">Person\'s image</string>
    <string name="nav_option_icon">Navigation Option Icon</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="setup">Setup</string>
    <string name="recipient">Recipient : </string>
    <string name="send">Send</string>
    <string name="hostname">Enter hostname</string>
    <string name="port">Enter Port number</string>
    <string name="service">Enter service name</string>
    <string name="username">Enter username</string>
    <string name="password">Enter password</string>

</resources>
