<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="60dp"
    android:layout_height="60dp" >

    <ImageView
        android:layout_width="55dp"
        android:layout_height="65dp"
        android:contentDescription="@string/detailBubble"
        android:src="@drawable/custom_marker" />

    <ImageView
        android:layout_width="20dp"
        android:layout_height="55dp"
        android:contentDescription="@string/personImage"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/num_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/ab"
        android:textColor="#ce8223"
        android:textSize="15sp"
        android:textStyle="bold" />

</RelativeLayout>