<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/setup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/setup" >
    </Button>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="70dp"
            android:text="@string/recipient" />

        <EditText
            android:id="@+id/recipient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:minWidth="250dp"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:textSize="16sp" />
    </LinearLayout>

    <ListView
        android:id="@+id/listMessages"
        android:layout_width="wrap_content"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:scrollbars="horizontal" />

    <EditText
        android:id="@+id/sendText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:scrollHorizontally="true"
        android:singleLine="true"
        android:textSize="16sp" />

    <Button
        android:id="@+id/send"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/send" >
    </Button>

</LinearLayout>